--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,6 @@
-pandas==1.3.4
-numpy==1.21.4
-scikit-learn==1.0.2
-streamlit==1.22.0
+pandas~=1.5.2
+streamlit~=1.20.0
+SQLAlchemy~=2.0.9
+mysql-connector-python~=8.0.32
+plotly~=5.13.1
+GitPython~=3.1.31
